update project settings

--- a/FunnyGiphy/Supporting Files/Info.plist
+++ b/FunnyGiphy/Supporting Files/Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleDisplayName</key>
-	<string>Funny&apos;s</string>
+	<string>Funny's</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
